Add all endpoints and add Dockerfile
