# internal/dto/response_success.go
@@ -1,0 +1,6 @@
+package dto
+
+type SuccessResponse struct {
+	Message string      `json:"message" example:"success"`
+	Data    interface{} `json:"data,omitempty"`
+}
